# ansible-old

./: .ansible-lint  Cheatsheet.md  Dockerfile.ubuntu  README.md  Vagrantfile  ansible.cfg  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.docker/: Dockerfile.ubuntu  entrypoint  entrypoint.sh
.hashicorp/ubuntu2004/: Vagrantfile
inventories/: hosts.yml  prod.yml  productive.yml  test.yml  testing.yml
inventories/group_vars/: all.yml
inventories/group_vars/all/: vars.yml
inventories/group_vars/kubernetes_nodes/: vars.yml
inventories/group_vars/test/: vars.yml
inventories/host_vars/localhost/: vars.yml
playbooks/: binary_all.yml  binary_bazelisk.yml  binary_docker_compose.yml  install_devops_tools.yml  organize_packages.yml  ping.yml  setup_kubernetes_nodes.yml  upgrade_all_packages.yml
roles/: requirements.yml
roles/geerlingguy.containerd/meta/: .galaxy_install_info
roles/geerlingguy.kubernetes/meta/: .galaxy_install_info
roles/geerlingguy.swap/meta/: .galaxy_install_info
test/: jinja2_key_in_dict.yml  jinja2_nested_dict.yml  jinja2_search_filter.yml
